:bug: Remove vertical scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 .GalleryItem {
-  height: 100%;
+  height: 99%;
 }
 
 .GalleryList {
@@ -36,7 +36,7 @@ body {
 
 .GalleryListItem {
   position: relative;
-  height: 100%;
+  height: 99%;
 }
 
 .GalleryName {
